# dog-eared

./: .env.example  .gitignore  PROJECT_STATE.md  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
PROJECT_SOURCES/: feature-inbox-auto-tiktok-source.md  feature-inbox-enhanced-capture.md  github-setup.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  book.py  edition.py  intake.py  owned.py  shelf.py  status.py  user.py
backend/app/routers/: __init__.py  auth.py  intake.py  owned.py  sources.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx  api.ts  auth.ts  routes.tsx
frontend/src/components/: BottomNav.tsx  FormatIcon.tsx  PageShell.tsx  RequireAuth.tsx
frontend/src/pages/: Capture.tsx  Inbox.tsx  Login.tsx  Owned.tsx  Queue.tsx  Reading.tsx  Resolve.tsx  Settings.tsx
